
* SOLR-11921: Move "cursorMark" logic from QueryComponent to SearchHandler so it can work with things like QueryElevationComponent
  that modify the SortSpec in prepare(), as well as possible custom "search" components other then QueryComponent.  (hossman)

* SOLR-15317: Correctly handle user principals with whitespace in PKIAuthPlugin (Dominik Dresel, Mike Drob)

Other Changes
---------------------
* SOLR-15118: Deprecate CollectionAdminRequest.getV2Request(). (Jason Gerlowski)

* SOLR-15292: An ERROR is logged if SignatureUpdateProcessorFactory is used in SolrCloud cluster in a way that is known to
  be problematic with multiple replicas.  In 9.0 this situation will prevent collection initialization. (hossman)


==================  8.8.2 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

Bug Fixes
---------------------

* SOLR-15249: Properly set ZK ACLs on /security.json (Mike Drob)

* SOLR-15288: Hardening NODEDOWN event in PRS collections (noble)

* SOLR-15233: Set doAs param in ConfigurableInternodeAuthHadoopPlugin (Geza Nagy, Jason Gerlowski, Mike Drob)

* SOLR-15217: Use shardsWhitelist in ReplicationHandler. (Bruno Roustant)

==================  8.8.1 ==================

Bug Fixes
---------------------

* SOLR-15145: System property to control whether base_url is stored in state.json to enable back-compat with older SolrJ versions.
  (Timothy Potter)

* SOLR-15114: Fix bug that caused WAND optimization to be disabled in cases where the max score is requested (such as
  multi-shard requests in SolrCloud) (Naoto Minami via Tomás Fernández Löbbe)

* SOLR-15136: Reduce excessive logging introduced with Per Replica States feature (Ishan Chattopadhyaya)

* SOLR-15138: Collection creation for PerReplicaStates does not scale to large collections as well as regular collections
  (Mike Drob, Ilan Ginzburg, noble, Ishan Chattopadhyaya)
